argo-workflows/overlays/production/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argo-server
  namespace: argo
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`argo-workflows.127.0.0.1.nip.io`)
      priority: 10
      services:
        - name: argo-server
          port: 2746
    - kind: Rule
      match: Host(`argo-workflows.127.0.0.1.nip.io`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argo-server
          port: 2746
          scheme: h2c
